# CertoraProver

./: Dockerfile  README.md  build.gradle.kts  gradle.properties  text
.circleci/: config.yml
Public/: skip_checks.csv
Public/CITests/: testCertoraClient.py  testCertoraRunErrors.py  testCertoraRunUtils.py  testCertoraUtils.py  testMutateClient.py
Public/TestEVM/BMC/: C.sol  C.spec  Default.conf  InvParams.sol  InvParams.spec  SucceedingLessThanFive.conf  SucceedingLessThanFiveParamConditional.conf  SucceedingWithHook.conf  SucceedingWithHookNoneBMC.conf  SucceedingWithMapping.conf  SucceedingWithMappingQuantified.conf  ViolatedLessThanFive.conf  ViolatedLessThanFiveParamConditionalWithRequire.conf  WithMapping.sol  WithMapping.spec  expectedDefault.json  expectedDefault.txt  expectedSucceedingLessThanFive.json  expectedSucceedingLessThanFiveParamConditional.json  expectedSucceedingWithHook.json  expectedSucceedingWithHookNoneBMC.json  expectedSucceedingWithMapping.json  expectedSucceedingWithMappingQuantified.json  expectedViolatedLessThanFive.json
Public/TestEVM/CodeMapInternalFuncs/: cmif.sol  cmif.spec  readme.md
Public/TestEVM/Counter/: Counter.sol  Counter.spec  counter.conf  expectedcounter.json
Public/TestEVM/ExtendedLinking/: Default.conf
Public/TestEVM/MethodPickingTest/: Bad.conf  C.sol  C.spec  ExcludeOnly.conf  IncludeAndExclude.conf  IncludeOnly.conf  expectedBad.txt  expectedExcludeOnly.json  expectedIncludeAndExclude.json  expectedIncludeOnly.json
Public/TestEVM/RequireReasons/: C.sol  Default.conf  FunctionInputRequires.conf  Trickier.conf  WithCheck.conf  default.spec  expectedDefault.json  expectedFunctionInputRequires.json  expectedFunctionInputRequires.txt  expectedTrickier.json  expectedTrickier.txt  expectedWithCheck.txt  functionInputRequires.spec  trickier.spec
Public/TestEVM/StorageExtensions/: DirectStorage.conf  Double.conf  ERC7201.conf  EmptySpec.sol  Incomplete.conf  Single.conf  SingleWithEmpty.conf  Spec.sol  Spec1.sol  Spec2.sol  Test.sol  Test.spec  Test2.sol  Test_ERC7201.sol  Test_ERC7201.spec  Two.conf  expectedDirectStorage.json  (+5 more)
Public/TestRanger/: C.spec  Default.conf  SucceedingLessThanFive.conf  SucceedingLessThanFiveParamConditional.conf  SucceedingWithHook.conf  SucceedingWithMapping.conf  SucceedingWithMappingQuantified.conf  ViolatedLessThanFive.conf  ViolatedLessThanFiveParamConditionalWithRequire.conf  WithHook.spec  expectedDefault.json  expectedSucceedingLessThanFive.json  expectedSucceedingLessThanFiveParamConditional.json  expectedSucceedingWithHook.json  expectedSucceedingWithHookNoneBMC.json  expectedSucceedingWithMapping.json  expectedSucceedingWithMappingQuantified.json  expectedViolatedLessThanFive.json  expectedViolatedLessThanFiveParamConditionalWithRequire.json
Public/TestSoroban/Meridian2024-workshop/: Cargo.toml  Default.conf  certora_build.py  certora_meridian24_token.wasm
Public/TestSoroban/Meridian2024-workshop/src/: lib.rs
Public/TestSoroban/Meridian2024-workshop/src/certora/: build.sh  spec.rs
Public/TestSoroban/Meridian2024-workshop/src/certora/manual_mutants_lib_rs/: mutant1.rs  mutant2.rs  mutant3.rs
Public/TestSoroban/i128FromVal/: Cargo.toml  Default.conf  expectedDefault.json  i128_to_from_val.wasm
Public/TestSoroban/i128FromVal/src/: lib.rs
Public/TestSoroban/overflow/: Cargo.toml  Opt0.conf  Opt1.conf  Opt2.conf  Opt3.conf  README.md  expectedOpt2.json  test_opt_0.wasm  test_opt_1.wasm  test_opt_3.wasm
Public/TestSoroban/overflow/src/: lib.rs
Public/TestSoroban/storage/: Cargo.toml  Default.conf  expectedDefault.json  storage_keys.wasm
Public/TestSoroban/storage/src/: lib.rs
detekt/: detekt.yml
fried-egg/: Cargo.toml  build.sh
fried-egg/src/: lin_inv.rs  logical_equality.rs  main.rs  ruler-rules.json
scripts/: certora_cli_publish.py  certora_cli_requirements.txt  localRegtest.py
scripts/CertoraProver/: certoraBuild.py
scripts/mutate_testing/: Bank.conf
scripts/python_lint/: python_lint_requirements.txt
src/test/resources/solana/project_for_tests/: Cargo.toml  README.md  certora_build  justfile  run.conf
src/test/resources/solana/project_for_tests/src/: functionality.rs  functions.rs  intrinsics.rs  print_128.rs  print_structs.rs  rule_locations.rs  spec.rs  tree_view.rs
(+1288 files in other folders)
