[package]
name = "project_for_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/spec.rs"

[profile.dev]
split-debuginfo = "unpacked"

[features]
certora = []

[package.metadata.certora]
sources = [
    "Cargo.toml",
    "src/**/*.rs"
]
solana_inlining = ["./cvt_inlining.txt"]
solana_summaries = ["./cvt_summaries.txt"]
